--- a/css/result.css
+++ b/css/result.css
@@ -168,7 +168,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-image: url('../img/gyeoly.jpg');
+  background-image: url('../img/pin.jpeg');
   background-size: cover;
   transition: all 0.2s ease-out;
 }
